<resources>
    <string name="app_name">Belajar Bahasa Daerah</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">Don\'t have account? Register here!</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="searchText">Search</string>
    <string name="profile">profile</string>
    <string name="username">username</string>
    <string name="name_of_fery">Agus Fery Suyatna</string>
    <string name="email_of_fery">ferysuyatna08@gmail.com</string>
    <string name="name_of_hadiyan">Hadiyan Nadzri H</string>
    <string name="email_of_hadiyan">hadianharis@gmail.com</string>
    <string name="name_of_dinu">A. Nurul Istiqamah</string>
    <string name="email_of_dinu">hello.andinu@gmail.com</string>
    <string name="you_can_click_our_name_to_email_us">You can click our name to email us:)</string>
</resources>
