<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#EEE8E8"
    tools:context=".TentangActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Developer"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/fery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/roundbutton">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_fery"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_of_fery"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aji"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/roundbutton">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_hadiyan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_of_hadiyan"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dinu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/roundbutton">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/photo_dinu" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_dinu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_of_dinu"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_click_our_name_to_email_us"/>
</LinearLayout>